# fastapi_zero

./: pyproject.toml
fastapi_zero/: app.py
tests/: test_app.py
